--- a/.gitattributes
+++ b/.gitattributes
@@ -14,3 +14,6 @@ webserver/graphql/schema/ent.graphql linguist-generated=true
 webserver/graphql/schema.graphql linguist-generated=true
 webserver/internal/www/schema.graphql linguist-generated=true
 webserver/internal/www/build/** linguist-generated=true
+
+rust/cargo.lock linguist-generated=true
+rust/cargo.toml linguist-generated=true
